Add some styling rules to the lesson page

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     background: "ffffff";
-    font-family: Montserrat, Helvetica, arial, sans-serif;
+    font-family: "Helvetica Neue", arial, sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -10,7 +10,7 @@
 /* Style the top nav bar with flexbox */
 .nav-top {
     background: #033254;
-    padding: 40px;
+    padding: 30px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -167,6 +167,32 @@ footer {
     background: #033254;
     text-align: center;
     color: #f0f8ff;
+}
+
+/* Styling for a lesson page */
+.section-1 h1, .section-1 p {
+    max-width: 540px;
+    text-align: left;
+    margin: 20px auto;
+}
+
+.section-1 h1 {
+    color: rgb(70, 70, 70);
+    font-size: 35px;
+    line-height: 1.125;
+}
+
+.section-1 p {
+    color: rgb(96, 96, 96);
+    font-size: 18px;
+    line-height: 1.5;
+}
+
+/* Change screen when the screen width is smaller than 540px */
+@media only screen and (max-width:540px) {
+    .section-1 h1, .section-1 p {
+        margin: 20px 5%;
+    }
 }
 
 /* Change screen when the screen width is smaller than 466px */
