--- a/style.css
+++ b/style.css
@@ -66,9 +66,8 @@
 .homepage-header-button {
     font-size: 20px;
     padding: 7px;
-    font-family: 'Montserrat', Helvetica, sans-serif;
-    background-color: ffffff;
-    color: #000000;
+    background-color: #ffffff;
+    color: #033254;
     text-align: center;
     align-items: center;
     border: 0px;
@@ -90,7 +89,7 @@
 /* For the subtitle below NEXT GEN STEM in the header */
 .homepage-header p {
     font-size: 24px;
-    color: hsl(240, 100%, 95%);
+    color: hsl(0, 0%, 98%);
     margin-top: 10px;
     margin-bottom: 20px;
 }
@@ -101,7 +100,7 @@
     margin-top: 30px;
     margin-bottom: 30px;
     font-size: 24px;
-    color: #080808;
+    color: hsl(0, 0%, 27%);
 }
 
 .homepage-h2 {
@@ -114,7 +113,7 @@
 
 /* Style the bottom nav bar with flexbox */
 .nav-bottom {
-    background: rgb(155, 155, 155);
+    background: rgb(211, 211, 211);
     padding: 40px;
     display: flex;
     flex-direction: row;
@@ -133,8 +132,15 @@
     font-weight: bold;
     font-size: 24px;
     width: 300px;
-    padding: 100px;
-    margin: 3px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    margin: 5px;
+    box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.21), 0px 5px 20px 0px rgba(0, 0, 0, 0.2);
+    transition: box-shadow 0.35s cubic-bezier(.24, .8, .24, 1);
+}
+
+.nav-bottom-link:hover {
+    box-shadow: 0 4px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 /* Additional css for the images of each of the course links*/
@@ -180,12 +186,14 @@ footer {
     color: rgb(70, 70, 70);
     font-size: 35px;
     line-height: 1.125;
+    letter-spacing: normal;
 }
 
 .section-1 p {
     color: rgb(96, 96, 96);
     font-size: 18px;
     line-height: 1.5;
+    letter-spacing: normal;
 }
 
 /* Change screen when the screen width is smaller than 540px */
@@ -213,6 +221,7 @@ footer {
         text-align: center;
         display: inline-block;
         width: 100%;
+        margin: 3px;
     }
 
     /* Decrease the text size of the header text */
