--- a/style.css
+++ b/style.css
@@ -262,16 +262,25 @@ footer {
 }
 
 /* Styling for a lesson page */
-.section-1 h1, .section-1 p {
+.section-1 p, .section-1 h1, .section-1 h2, 
+.section-2 p, .section-2 h1, .section-2 h2, .section-2 ol {
     max-width: 540px;
     text-align: left;
     margin: 20px auto;
 }
 
+/* A kind of section with a white background */
 .section-1 h1 {
     color: rgb(70, 70, 70);
     font-size: 35px;
     line-height: 1.125;
+    letter-spacing: normal;
+}
+
+.section-1 h2 {
+    color: rgb(70, 70, 70);
+    font-size: 28px;
+    line-height: 1.25;
     letter-spacing: normal;
 }
 
@@ -282,9 +291,72 @@ footer {
     letter-spacing: normal;
 }
 
+.section-1 ol {
+    padding-bottom: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding-left: 50px;
+    color: rgb(96, 96, 96);
+    font-size: 18px;
+    line-height: 1.5;
+    letter-spacing: normal;
+    list-style-type: decimal;
+}
+
+/* Another kind of section with a gray background */
+.section-2 {
+    background: rgb(200, 200, 200);
+}
+
+.section-2 h1 {
+    padding-top: 10px;
+    padding-bottom: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    color: rgb(35, 35, 35);
+    font-size: 35px;
+    line-height: 1.125;
+    letter-spacing: normal;
+}
+
+.section-2 h2 {
+    padding-top: 10px;
+    padding-bottom: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    color: rgb(35, 35, 35);
+    font-size: 24px;
+    line-height: 1.25;
+    letter-spacing: normal;
+}
+
+.section-2 p {
+    padding-bottom: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    color: rgb(74, 74, 74);
+    font-size: 18px;
+    line-height: 1.5;
+    letter-spacing: normal;
+}
+
+/* TODO: Maybe change the list numbers to images */
+.section-2 ol {
+    padding-bottom: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding-left: 50px;
+    color: rgb(74, 74, 74);
+    font-size: 18px;
+    line-height: 1.5;
+    letter-spacing: normal;
+    list-style-type: decimal;
+}
+
 /* Change screen when the screen width is smaller than 540px */
 @media only screen and (max-width:540px) {
-    .section-1 h1, .section-1 p {
+    .section-1 h1, .section-1 h2, .section-1 p,
+    .section-2 h1, .section-2 h2, .section-2 p {
         margin: 20px 5%;
     }
 
