--- a/style.css
+++ b/style.css
@@ -411,6 +411,7 @@ footer {
     padding: 10px 20px;
     margin: 3px;
     font-size: 18px;
+    width: 140px;
     box-shadow: inset 0px 0px 2px rgba(0, 0, 0, 0.25);
 }
 
