--- a/style.css
+++ b/style.css
@@ -62,6 +62,140 @@ section p.course-descriptions-java {
     padding-bottom: 30px;
 }
 
+/* Style for a link*/
+section p.link {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: left;
+    overflow: hidden;
+    font-size: 18px;
+    margin: 40px;
+    height: 90%;
+    padding-bottom: 100px;
+}
+
+/* Style for the feedback section on the about page*/
+section p.feedback2 {
+    color: black;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: left;
+    overflow: hidden;
+    font-size: 25px;
+    margin: 40px;
+    height: 90%;
+}
+/* Style for the map*/
+section section.map {
+    padding-top: 50px;
+}
+
+/* Style for the feeback on about*/
+section p.feedback {
+    color: black;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    overflow: hidden;
+    font-size: 30px;
+    margin: 40px;
+    height: 90%;
+}
+
+/* Style for the table title*/
+
+section.the-team {
+    background-color: #033254;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    overflow: hidden;
+    font-size: 35px;
+    padding: 40px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    overflow: hidden;
+    padding-bottom: 60px;
+
+
+}
+
+/* Style for the table in about section AS A WHOLE*/
+
+section table.team {
+    background-color: #033254;
+    width: 100%;
+    padding-top: 10px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    overflow: hidden;
+} 
+
+/*Email button about page*/
+
+section button.email-button-about {
+    font-size: 20px;
+    padding: 7px;
+    font-family: 'Montserrat', Helvetica, sans-serif;
+    background-color: ffffff;
+    color: #000000;
+    text-align: center;
+    align-items: center;
+    border: 0px;
+    border-radius: 3px;
+    width: 320px;
+    justify-content: center;
+    position: absolute;
+    left: 50%;
+    display: flex;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+/*Email button hover about page*/
+
+section button.email-button-about:hover {
+    background-color: #9b9b9b;
+    color: #033254;
+    transition-duration: .1s;
+    border-radius: 2px;
+    justify-content: center;
+    display: flex;
+    border-color: black;
+
+}
+/* Style for our names in the table */
+
+section table tr.table-header {
+    color: white;
+    text-align: left;
+    width: 25%;
+    font-size: 20px;
+    text-indent: 10px;
+    padding-bottom: 15px;
+}
+/* Style for the information in the table */
+
+section table td.table {
+    color: white;
+    text-align: left;
+    width: 25%;
+    font-size: 18px;
+    padding: 10px;
+    vertical-align: baseline;
+    padding-bottom: 10px;
+
+}
+
 /*Email button*/
 
 section button.email-button {
