--- a/style.css
+++ b/style.css
@@ -5,6 +5,12 @@
     box-sizing: border-box;
 
 }
+/* Style for course requirements */
+section.course-requirements {
+    background-color: lightgray;
+    padding-bottom: 20px;
+
+}
 
 /* Style for the coding courses header on learn to code page */
 section.courses div {
