--- a/style.css
+++ b/style.css
@@ -559,6 +559,7 @@ footer {
     counter-increment: line;
 }
 
+/* Add the line numbers */
 .code code:before {
     content: counter(line) ": ";
     display: inline-block;
@@ -632,9 +633,12 @@ code.hl {
     .section-1 p,
     .section-2 h1,
     .section-1 h2,
-    .section-2 p,
-    .code {
+    .section-2 p {
         margin: 20px 5%;
+    }
+
+    .code {
+        margin-left: 5%;
     }
 
     /* Decrease text size for smaller screens */
