--- a/style.css
+++ b/style.css
@@ -424,7 +424,9 @@ footer {
 }
 
 .section-1 iframe {
-    margin: 20px auto;
+    display: block;
+    padding: 20px;
+    margin: auto;
 }
 
 /* A kind of section with a white background */
