--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     box-sizing: border-box;
 
 }
+
 /* Style for videos */
 
 section.video {
@@ -14,7 +15,8 @@ section.video {
     justify-content: center;
     overflow: hidden;
     padding: 20px;
-    }
+}
+
 /* Style for course requirements */
 section.course-requirements {
     background-color: lightgray;
@@ -462,6 +464,14 @@ footer {
     letter-spacing: normal;
 }
 
+.section-1 p code {
+    color: rgb(96, 96, 96);
+    font-size: 18px;
+    line-height: 1.5;
+    font-family: 'Courier New', Courier, monospace;
+    letter-spacing: normal;
+}
+
 .section-1 ol {
     padding-bottom: 5px;
     margin-top: 5px;
@@ -484,6 +494,20 @@ footer {
     line-height: 1.5;
     letter-spacing: normal;
     list-style-type: decimal;
+}
+
+.section-1 img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
+    height: auto;
+}
+
+.img-gallery {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 /* Another kind of section with a gray background */
