--- a/templates/course-landing-page-template.html
+++ b/templates/course-landing-page-template.html
@@ -78,6 +78,12 @@
         </pre>
     </section>
 
+    <!-- Add the appropriate links to each <a> tag -->
+    <section class="next-previous-wrapper">
+        <a href="#" class="previous">&lt; Previous</a>
+        <a href="#" class="next">Next &gt;</a>
+    </section>
+
     <nav class="course-nav">
         <ul>
             <!-- Replace # with html file names of pages -->
