--- a/templates/course-landing-page-template.html
+++ b/templates/course-landing-page-template.html
@@ -75,8 +75,8 @@
 
     <!-- Add the appropriate links to each <a> tag -->
     <section class="next-previous-wrapper">
-        <a href="#" class="previous">&lt; Previous</a>
-        <a href="#" class="next">Next &gt;</a>
+        <a href="#">&lt; Previous</a>
+        <a href="#">Next &gt;</a>
     </section>
 
     <nav class="course-nav">
