--- a/templates/video-course-template.html
+++ b/templates/video-course-template.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<!-- Note to self: option + shift + f to format code -->
-<!-- Note: maybe implement vw later -->
 
 <head>
     <meta charset="utf-8" />
     <meta name="keywords" content="HTML, CSS, JavaScript, Java, Python" />
     <meta name="description" content="Free programming tutorials" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,500&display=swap"
-        rel="stylesheet" />
     <link rel="stylesheet" href="../style.css" />
     <title>Next Gen Stem</title>
 </head>
@@ -17,7 +13,6 @@
 <body>
     <nav class="nav-top">
         <ul class="nav-top-ul">
-            <!-- TODO: Fill in links -->
             <li><b><a href="../index.html" class="nav-top-link">Home</a></b></li>
             <li><b><a href="../learntocode.html" class="nav-top-link">Learn to Code</a></b></li>
             <li><b><a href="../about.html" class="nav-top-link">About</a></b></li>
@@ -40,21 +35,27 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/mD3GmqjmqXQ" frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
-    
+
+    <!-- Add the appropriate links to each <a> tag -->
+    <section class="next-previous-wrapper">
+        <a href="#">&lt; Previous</a>
+        <a href="#">Next &gt;</a>
+    </section>
+
     <nav class="course-nav">
         <ul>
             <!-- COURSE BUTTONS: Change file name and text on button-->
-            <li><a href="js1.html">Introduction</a></li>
-            <li><a href="js2.html">Lesson 1</a></li>
-            <li><a href="js3.html">Lesson 2</a></li>
-            <li><a href="js4.html">Lesson 3</a></li>
-            <li><a href="js5.html">Lesson 4</a></li>
-            <li><a href="js6.html">Lesson 5</a></li>
-            <li><a href="js7.html">Lesson 6</a></li>
-            <li><a href="js8.html">Lesson 7</a></li>
-            <li><a href="js9.html">Lesson 8</a></li>
-            <li><a href="js10.html">Lesson 9</a></li>
-            <li><a href="js11.html">Lesson 10</a></li>
+            <li><a href="#">Introduction</a></li>
+            <li><a href="#">Lesson 1</a></li>
+            <li><a href="#">Lesson 2</a></li>
+            <li><a href="#">Lesson 3</a></li>
+            <li><a href="#">Lesson 4</a></li>
+            <li><a href="#">Lesson 5</a></li>
+            <li><a href="#">Lesson 6</a></li>
+            <li><a href="#">Lesson 7</a></li>
+            <li><a href="#">Lesson 8</a></li>
+            <li><a href="#">Lesson 9</a></li>
+            <li><a href="#">Lesson 10</a></li>
         </ul>
     </nav>
     <footer>
