--- a/style.css
+++ b/style.css
@@ -43,13 +43,10 @@ section p.coding-info {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
-    overflow: hidden;
-    font-size: 25px;
-    margin: 40px;
-    justify-content: left;
+    font-size: 22px;
+    margin: 40px auto;
     height: 90%;
-
+    max-width: 30rem;
 }
 
 /* Style for the general course descriptions on learn to code page*/
@@ -88,7 +85,8 @@ section p.link {
     justify-content: left;
     overflow: hidden;
     font-size: 18px;
-    margin: 20px;
+    margin: 20px auto;
+    max-width: 30rem;
     height: 90%;
     padding-bottom: 50px;
 }
@@ -102,7 +100,8 @@ section p.feedback2 {
     justify-content: left;
     overflow: hidden;
     font-size: 25px;
-    margin: 40px;
+    margin: 40px auto;
+    max-width: 30rem;
     height: 90%;
 }
 
