--- a/templates/course-landing-page-template.html
+++ b/templates/course-landing-page-template.html
@@ -67,7 +67,7 @@
             <code class="hl">function drawScore() { </code>
             <code class="hl">   context.font = "64px Courier New"; </code>
             <code class="hl">   context.textAlign = "center"; </code>
-            <code class="hl">   context.fillStyle = "e0e0e0"; </code>
+            <code class="hl">   context.fillStyle = "#e0e0e0"; </code>
             <code class="hl">   context.fillText(`${playerScore} ${opponentScore}`, canvas.width / 2, 60);</code>
             <code class="hl">}</code>
         </pre>
