--- a/style.css
+++ b/style.css
@@ -290,17 +290,46 @@ section button.email-button:hover {
     list-style-type: none;
 }
 
+.video-container video {
+    object-fit: cover;
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -2;
+}
+
+.video-container .color {
+    object-fit: cover;
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #033254;
+    opacity: 30%;
+    z-index: -1;
+}
+
 /* Style the header (only for the homepage) */
 .homepage-header {
-    background-image: url("images/code-2.mp4");
-    background-size: cover;
-    background-position: inherit;
-    height: 600px;
-    justify-content: center;
     color: rgb(255, 255, 255);
-    padding-top: 200px;
-    padding-bottom: 100px;
+    position: relative;
+    height: 100vh;
     text-align: center;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+}
+
+/* Make header h1 bigger */
+.homepage-header h1 {
+    text-align: center;
+    font-size: 70px;
+    text-shadow: 0 2px 7px #000000;
 }
 
 /* Style the button in the header */
@@ -320,12 +349,6 @@ section button.email-button:hover {
 .homepage-header-button:hover {
     background-color: #9b9b9b;
     color: #033254;
-}
-
-/* Make header h1 bigger */
-.homepage-header h1 {
-    font-size: 70px;
-    text-shadow: 0 2px 7px #000000;
 }
 
 /* For the subtitle below NEXT GEN STEM in the header */
