--- a/style.css
+++ b/style.css
@@ -554,6 +554,8 @@ hr,
     border-collapse: collapse;
     border: 1px solid rgb(200, 200, 200);
     letter-spacing: normal;
+    display: flex;
+    flex-flow: column;
 }
 
 .section-1 table caption {
