--- a/templates/course-landing-page-template.html
+++ b/templates/course-landing-page-template.html
@@ -40,7 +40,7 @@
             This Course
         </h2>
         <p>
-            <!-- Info on your course. Copy and paste from folder or nextenstem.co under your section -->
+            <!-- Info on your course. -->
             info... Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             Donec dignissim libero ac porttitor sagittis. Integer et libero
             pretium, maximus tortor in, imperdiet ipsum. Proin ut augue at erat
@@ -50,7 +50,7 @@
             auctor arcu id, tempor sem. Nullam sit amet mi aliquam, tristique
             quam id, gravida lacus. Sed nec semper libero.
         </p>
-        <!-- Course Reqs. Copy and paste from folder or nextenstem.co under your section-->
+        <!-- Course Reqs. -->
         <ol>
             <li>Course req</li>
             <li>Course req</li>
